--- a/index.html
+++ b/index.html
@@ -705,14 +705,14 @@
                         <div class="contact-icon">📍</div>
                         <div class="contact-text">
                             <h3>Location</h3>
-                            <p>123 Design Street, Creative District, Mumbai, India</p>
+                            <p>Palanapur, Jagatnaka, District:Surat, Gujarat, India</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">🕒</div>
                         <div class="contact-text">
                             <h3>Working Hours</h3>
-                            <p>Monday - Friday: 9AM - 6PM<br>Saturday: 10AM - 4PM</p>
+                            <p>Monday - Friday: 9AM - 6PM<br>Saturday, Sunday 10AM - 4PM</p>
                         </div>
                     </div>
                 </div>
@@ -747,12 +747,12 @@
             <div class="footer-content">
                 <div class="logo">KHD <span>INTERIOR</span></div>
                 <p>Transforming spaces, enhancing lives since 2015</p>
-                <div class="social-links">
+              <!--  <div class="social-links">
                     <a href="#">📱</a>
                     <a href="#">📘</a>
                     <a href="#">📸</a>
                     <a href="#">💼</a>
-                </div>
+                </div> -->
                 <p>&copy; 2023 KHD INTERIOR. All rights reserved.</p>
             </div>
         </div>
